--- a/Calculator/Calculator.csproj
+++ b/Calculator/Calculator.csproj
@@ -44,20 +44,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Addition.cs" />
-    <Compile Include="Division.cs" />
+    <Compile Include="OneArgument\IOperation.cs" />
+    <Compile Include="TwoArgument\IOperation.cs" />
+    <Compile Include="TwoArgument\Addition.cs" />
+    <Compile Include="TwoArgument\Division.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Module.cs" />
-    <Compile Include="Multiplication.cs" />
+    <Compile Include="OneArgument\Module.cs" />
+    <Compile Include="TwoArgument\Multiplication.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Sinus.cs" />
-    <Compile Include="Subtraction.cs" />
+    <Compile Include="OneArgument\Sinus.cs" />
+    <Compile Include="TwoArgument\Subtraction.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
