Add Fabric for one argument

--- a/Calculator/Calculator.csproj
+++ b/Calculator/Calculator.csproj
@@ -44,7 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="OneArgument\IOperation.cs" />
+    <Compile Include="OneArgument\ISingleOperation.cs" />
     <Compile Include="TwoArgument\IOperation.cs" />
     <Compile Include="TwoArgument\Addition.cs" />
     <Compile Include="TwoArgument\Division.cs" />
