Add Factory for two argument

--- a/Calculator/Calculator.csproj
+++ b/Calculator/Calculator.csproj
@@ -44,7 +44,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OneArgument\OneArgumentFactory.cs" />
     <Compile Include="OneArgument\ISingleOperation.cs" />
+    <Compile Include="TwoArgument\TwoArgumentFactory.cs" />
     <Compile Include="TwoArgument\IOperation.cs" />
     <Compile Include="TwoArgument\Addition.cs" />
     <Compile Include="TwoArgument\Division.cs" />
