--- a/Calculator/Calculator.csproj
+++ b/Calculator/Calculator.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OneArgument\Factorial.cs" />
     <Compile Include="OneArgument\Cosinus.cs" />
     <Compile Include="OneArgument\OneArgumentFactory.cs" />
     <Compile Include="OneArgument\ISingleOperation.cs" />
