Add operation "Radical"

--- a/Calculator/Calculator.csproj
+++ b/Calculator/Calculator.csproj
@@ -48,6 +48,7 @@
     <Compile Include="OneArgument\Cosinus.cs" />
     <Compile Include="OneArgument\OneArgumentFactory.cs" />
     <Compile Include="OneArgument\ISingleOperation.cs" />
+    <Compile Include="Radical.cs" />
     <Compile Include="TwoArgument\Pow.cs" />
     <Compile Include="TwoArgument\TwoArgumentFactory.cs" />
     <Compile Include="TwoArgument\IOperation.cs" />
