--- a/Calculator.Tests/Calculator.Tests.csproj
+++ b/Calculator.Tests/Calculator.Tests.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TwoArgument\AdditionTests.cs" />
     <Compile Include="OneArgument\FactorialTests.cs" />
     <Compile Include="OneArgument\CosinusTests.cs" />
     <Compile Include="OneArgument\ModuleTests.cs" />
@@ -58,9 +59,7 @@
       <Name>Calculator</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="TwoArgument\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
