--- a/Calculator.Tests/Calculator.Tests.csproj
+++ b/Calculator.Tests/Calculator.Tests.csproj
@@ -42,7 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TwoArgument\Division.cs" />
+    <Compile Include="TwoArgument\DivisionTests.cs" />
+    <Compile Include="TwoArgument\MultiplicationTests.cs" />
     <Compile Include="TwoArgument\PowTests.cs" />
     <Compile Include="TwoArgument\SubtractionTests.cs" />
     <Compile Include="TwoArgument\AdditionTests.cs" />
