--- a/Calculator.Tests/Calculator.Tests.csproj
+++ b/Calculator.Tests/Calculator.Tests.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FactoryTests.cs" />
     <Compile Include="TwoArgument\DivisionTests.cs" />
     <Compile Include="TwoArgument\MultiplicationTests.cs" />
     <Compile Include="TwoArgument\PowTests.cs" />
