Test Selection Sorting

--- a/Calculator.Tests/Calculator.Tests.csproj
+++ b/Calculator.Tests/Calculator.Tests.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="FactoryTests.cs" />
     <Compile Include="SortingOfMassiv\BubbleSortingTests.cs" />
+    <Compile Include="SortingOfMassiv\SelectionSortingTests.cs" />
     <Compile Include="TwoArgument\DivisionTests.cs" />
     <Compile Include="TwoArgument\MultiplicationTests.cs" />
     <Compile Include="TwoArgument\PowTests.cs" />
