--- a/Calculator/Calculator.csproj
+++ b/Calculator/Calculator.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="OneArgument\Sinus.cs" />
     <Compile Include="TwoArgument\Subtraction.cs" />
+    <Compile Include="Validation.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
